--- a/index.html
+++ b/index.html
@@ -181,5 +181,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="app.js"></script>
+  <img src="https://hits.sh/mananmadani.github.io/SpendTrail.svg" alt="" style="display:none;" />
 </body>
   </html>
