--- a/index.html
+++ b/index.html
@@ -181,13 +181,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="app.js"></script>
-  <!-- PWA Install Tracking -->
+<!-- PWA Install Tracking -->
   <script>
-    // Track PWA installations
     window.addEventListener('appinstalled', (evt) => {
-      fetch('https://api.countapi.xyz/hit/spendtrail-pwa/downloads')
-        .catch(() => {}); // Silent fail if offline
+      // Create invisible image to track installs
+      const img = document.createElement('img');
+      img.src = 'https://hits.sh/spendtrail-installs.svg';
+      img.style.display = 'none';
+      document.body.appendChild(img);
     });
   </script>
+</body>
+</html>
 </body>
   </html>
