--- a/index.html
+++ b/index.html
@@ -2,8 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SpendTrail</title>
+  <title>SpendTrail - Personal Finance Tracker & Expense Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="SpendTrail - Personal Finance Tracker & Expense Manager">
+  <meta name="description" content="Track your income and expenses with SpendTrail. A simple, secure, and free personal finance management app with analytics, ledger, backup, and PDF export features.">
+  <meta name="keywords" content="expense tracker, finance manager, budget app, income tracker, personal finance, money management, spending tracker">
+  <meta name="author" content="SpendTrail">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mananmadani.github.io/">
+  <meta property="og:title" content="SpendTrail - Personal Finance Tracker & Expense Manager">
+  <meta property="og:description" content="Track your income and expenses with SpendTrail. A simple, secure, and free personal finance management app with analytics, ledger, backup, and PDF export features.">
+  <meta property="og:image" content="https://mananmadani.github.io/SpendTrail.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://mananmadani.github.io/">
+  <meta property="twitter:title" content="SpendTrail - Personal Finance Tracker & Expense Manager">
+  <meta property="twitter:description" content="Track your income and expenses with SpendTrail. A simple, secure, and free personal finance management app with analytics, ledger, backup, and PDF export features.">
+  <meta property="twitter:image" content="https://mananmadani.github.io/SpendTrail.png">
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="SpendTrail.png">
+  <link rel="apple-touch-icon" href="SpendTrail.png">
+  
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#4CAF50">
+  
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -186,4 +215,4 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   <script src="app.js"></script>
 </body>
-</html>
+  </html>
